@@ -24,12 +24,9 @@
  * Kerberos glue for MD4 sample implementation.
  */
 
-
-#include <krb5/krb5.h>
-#include <krb5/ext-proto.h>
-#include <krb5/rsa-md4.h>
-
-#include "../des/des_int.h"	/* we cheat a bit and call it directly... */
+#include "k5-int.h"
+#include "rsa-md4.h"
+#include "des_int.h"	/* we cheat a bit and call it directly... */
 
 static krb5_error_code
 md4_crypto_sum_func(in, in_length, seed, seed_length, outcksum)
